something happens, something works... will continue later

--- a/crm/templates/home.html
+++ b/crm/templates/home.html
@@ -2,6 +2,18 @@
 {% load static %}
 
 {% block content %}
-    <h1>Home</h1>
-    <p>Welcome to the home page</p>
+
+{% if user.is_authenticated %}
+
+<h1 class="text-primary text-center">Welcome {{ user.username }}!</h1>
+
+{% comment %}
+    {% include "crm.html" %}
+    # not yet exists
+{% endcomment %}
+
+{% else %}
+    {% include "login.html" %}
+{% endif %}
+
 {% endblock content %}
