--- a/crm/templates/customer.html
+++ b/crm/templates/customer.html
@@ -3,6 +3,40 @@
 
 {% block content %}
 
-<h2> {{ customer.first_name }} {{ customer.last_name  }}</h2>
-
+<div class="card mb-3 8/12">
+    <div class="card-header">
+        {% comment %} <ul class="nav nav-tabs card-header-tabs"> {% endcomment %}
+        {% comment %}
+        feel free choose any of these navs: tabs, pills. pills is now active
+        {% endcomment %}
+        <ul class="nav nav-pills card-header-pills">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="true" href="#">Latest info</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">History</a>
+            </li>
+        </ul>
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="{{ customer.image.url }}"
+                class="img-fluid rounded-start"
+                alt="{{ customer.first_name }} {{ customer.last_name  }}">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h2 class="card-title">{{ customer.first_name }} {{ customer.last_name  }}</h2>
+                <div class="h-25 w-100 d-inline-block"></div>
+                <p class="card-text placeholder-glow">
+                    <span class="placeholder col-8 bg-primary">{{ customer.username }}</span>
+                    <span class="placeholder col-8 bg-success">{{ customer.email }}</span>
+                    <span class="placeholder col-8 bg-info">MOBILE</span>
+                    <span class="placeholder col-8 bg-warning">+ info</span>
+                    <span class="placeholder col-8 bg-danger">VERY private and confidential</span>
+                </p>
+                <small class="text-body-secondary">{{ customer.updated_at }}</small>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
