--- a/crm/templates/crm.html
+++ b/crm/templates/crm.html
@@ -22,3 +22,19 @@
         {% endfor %}
     </tbody>
 </table>
+
+<nav>
+    <ul class="pagination justify-content-center">
+        {% comment %} should be disabled on the first page {% endcomment %}
+        <li class="page-item disabled">
+            <a class="page-link">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link active" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        {% comment %} should be disabled on the last page {% endcomment %}
+        <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+        </li>
+    </ul>
+</nav>
