--- a/crm/templates/add_customer.html
+++ b/crm/templates/add_customer.html
@@ -8,6 +8,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button class="btn btn-primary" type="submit">Add customer</button>
+    <a href="{% url 'home' %}" class="btn btn-secondary">I changed my mind: go home</a>
 </form>
 
 {% endblock %}
