--- a/crm/templates/_partials/navbar.html
+++ b/crm/templates/_partials/navbar.html
@@ -16,7 +16,7 @@
                 </ul>
                 <form class="d-flex my-2 my-lg-0">
                     {% csrf_token %}
-                    <input class="form-control me-sm-2" type="text" placeholder="Search">
+                    <input class="form-control me-sm-2" name="q" type="search" placeholder="Search">
                     <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
                 </form>
                 {% else %}
