update: search..., pagination

--- a/crm/templates/_partials/footinfo.html
+++ b/crm/templates/_partials/footinfo.html
@@ -1,3 +1,3 @@
 <div class="container">
-Copyright &copy; {% now "Y" %}
+    Copyright &mdash; DABZSE ( @dabzse | @mny ) &mdash; &copy; {% now "Y" %}
 </div>
