--- a/crm/templates/_partials/navbar.html
+++ b/crm/templates/_partials/navbar.html
@@ -14,9 +14,9 @@
                         <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
                     </li>
                 </ul>
-                <form class="d-flex my-2 my-lg-0">
+                <form method="GET" action="" class="d-flex my-2 my-lg-0">
                     {% csrf_token %}
-                    <input class="form-control me-sm-2" name="q" type="search" placeholder="Search">
+                    <input class="form-control me-sm-2" name="q" type="search" value="{{ query | default_if_none:'' }}" placeholder="Search...">
                     <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
                 </form>
                 {% else %}
