--- a/crm/templates/crm.html
+++ b/crm/templates/crm.html
@@ -50,16 +50,48 @@
 
 <nav>
     <ul class="pagination justify-content-center">
-        {% comment %} should be disabled on the first page {% endcomment %}
-        <li class="page-item disabled">
-            <a class="page-link">Previous</a>
-        </li>
-        <li class="page-item"><a class="page-link active" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        {% comment %} should be disabled on the last page {% endcomment %}
+        {% if customers.has_previous %}
         <li class="page-item">
+            <a class="page-link" href="?{% if query %}q={{ query }}&{% endif %}page=1">First</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="?{% if query %}q={{ query }}&{% endif %}page={{ customers.previous_page_number }}">Previous</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">First</a>
+        </li>
+        <li class="page-item disabled">
+            <a class="page-link" href="#">Previous</a>
+        </li>
+        {% endif %}
+
+        {% for num in customers.paginator.page_range %}
+        {% if customers.number == num %}
+        <li class="page-item active">
+            <a class="page-link" href="#">{{ num }}</a>
+        </li>
+        {% elif num > customers.number|add:'-5' and num < customers.number|add:'5' %}
+        <li class="page-item">
+            <a class="page-link" href="?{% if query %}q={{ query }}&{% endif %}page={{ num }}">{{ num }}</a>
+        </li>
+        {% endif %}
+        {% endfor %}
+
+        {% if customers.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?{% if query %}q={{ query }}&{% endif %}page={{ customers.next_page_number }}">Next</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="?{% if query %}q={{ query }}&{% endif %}page={{ customers.paginator.num_pages }}">Last</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
             <a class="page-link" href="#">Next</a>
         </li>
+        <li class="page-item disabled">
+            <a class="page-link" href="#">Last</a>
+        </li>
+        {% endif %}
     </ul>
 </nav>
